--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.md
-recursive-include openplotterMyapp/data *
-recursive-include openplotterMyapp/locale *
+recursive-include openplotterRs485/data *
+recursive-include openplotterRs485/locale *
