--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,15 @@
-Source: openplotter-myapp
+Source: openplotter-rs485
 Section: misc
 Priority: optional
-Maintainer: Sailoog <info@sailoog.com>
+Maintainer: Milan Broum <midlis@gmail.com>
 Build-Depends: debhelper (>=9),dh-python,python3-all,python3-setuptools
 Standards-Version: 3.9.6
-Homepage: https://github.com/openplotter/openplotter-myapp
+Homepage: https://github.com/midlis/openplotter-rs485
 X-Python3-Version: >= 3.2
 
-Package: openplotter-myapp
+Package: openplotter-rs485
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${python3:Depends}, openplotter-settings
-Description: This is a template to help create apps for OpenPlotter
- This is a template to help create apps for OpenPlotter
+Description: Attach a customized sensor device via RS485 to OpenPlotter.
+ Attach a customized sensor device via RS485 to OpenPlotter.
